# rag-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  data_prep.py  docker-compose.yml  ingestion.py  langgraph_self_rag.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  scraper.py  workflow.py
graders/: generate.py  grade_answer.py  grade_chunk.py  grade_hallucination.py  graph_state.py  multi_query_generator.py  question_rewriter.py  response_generator.py
graph/: __init__.py  consts.py  decide_to_generate.py  generate.py  generate_unknown.py  grade_documents.py  grade_generation_v_documents_and_question.py  graph.py  hybrid_search.py  retrieve.py  state.py  transform_query.py
graph/chains/: answer_grader.py  generation.py  generic_response.py  hallucination_grader.py  retrieval_grader.py  transformation.py
graph/nodes/: __init__.py  generate.py  generic_response.py  grade_documents.py  retrieve.py  transform.py  web_search.py
preprocessing/: __init__.py  ingestion.py  parser.py  scraper.py
