[project]
name = "rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "flashrank>=0.2.10",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "llama-cloud>=2.4.1",
    "openai>=2.30.0",
    "openevals>=0.2.0",
    "pdfminer>=20191125",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.27",
    "streamlit>=1.56.0",
    "unstructured>=0.22.26",
    "unstructured-pytesseract>=0.3.15",
]
